[package]
name = "hackchat"
version = "0.1.2"
authors = ["Gökberk Yaltıraklı <webdosusb@gmail.com>"]
description = "Hack.chat client library in Rust."
license = "MIT"
keywords = ["hack", "chat", "hackchat", "api", "bot"]
repository = "https://github.com/gkbrk/rust-hackchat"
documentation = "https://gkbrk.github.io/rust-hackchat/hackchat/index.html"


[dependencies]
websocket = "0.17"
rustc-serialize = "0.3"
